--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -101,14 +101,16 @@
     <div class="row profile-section name-section">
         <div id="firstNameContainer" class="col-lg-4 col-md-5 col-sm-6 col-xs-12 first-name-container" data-loader-container="true">
             <div id="firstNameGroup" class="form-group float-input-label">
-                <input {{"autofocus" if isFocus}} required="required" data-error="{{ _('First name is required') }}" class="form-control float-text" id="firstname" name="firstname" placeholder="{{ _('First Name') }}" value="{{ person.first_name if person and person.first_name }}" type="text"  autocomplete="off"/>
+                <input {{"autofocus" if isFocus}} required="required" data-error="{{ _('First name is required and must not contain invalid characters.') }}" class="form-control float-text" id="firstname" name="firstname" placeholder="{{ _('First Name') }}" value="{{ person.first_name if person and person.first_name }}" type="text"  autocomplete="off" data-htmltags="true" data-error-field="errorfirstname"/>
                 <div class="help-block with-errors"></div>
+                <div id="errorfirstname" class="error-message"></div>
             </div>
         </div>
         <div id="lastNameContainer" class="col-lg-5 col-md-6 col-sm-6 col-xs-12 last-name-container" data-loader-container="true">
             <div id="lastNameGroup" class="form-group float-input-label">
-                <input required="required" data-error="{{ _('Last name is required') }}" class="form-control float-text" id="lastname" name="lastname" placeholder="{{ _('Last Name') }}" value="{{ person.last_name if person and person.last_name }}" type="text" autocomplete="off"/>
+                <input required="required" data-error="{{ _('Last name is required and must not contain invalid characters.') }}" class="form-control float-text" id="lastname" name="lastname" placeholder="{{ _('Last Name') }}" value="{{ person.last_name if person and person.last_name }}" type="text" autocomplete="off" data-error-field="errorlastname" data-htmltags="true"/>
                 <div class="help-block with-errors"></div>
+                <div id="errorlastname" class="error-message"></div>
             </div>
         </div>
     </div>
@@ -525,14 +527,16 @@
 {% macro profilePhone(person) -%}
     <div id="phoneGroup" class="form-group float-input-label profile-section" data-loader-container="true">
         <label for="phone">{{ _("Cell") }} <span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
-        <input type="text" class="form-control" id="phone" name="phone" placeholder="{{ _('XXX-XXX-XXXX') }}" value="{{ person.phone if person and person.phone }}" />
+        <input type="text" class="form-control" id="phone" name="phone" placeholder="{{ _('XXX-XXX-XXXX') }}" value="{{ person.phone if person and person.phone }}"  data-htmltags="true" data-error-field="errorphone"/>
     </div>
+    <div id="errorphone" class="error-message"></div>
 {%- endmacro %}
 
 {% macro profileAltPhone(person) -%}
     <div id="altPhoneGroup" class="form-group float-input-label profile-section" data-loader-container="true">
         <label for="altPhone">{{ _("Phone (Other)") }} <span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
-        <input type="text" class="form-control" id="altPhone" name="altPhone" placeholder="{{ _('XXX-XXX-XXXX') }}" value="{{ person.alt_phone if person and person.alt_phone }}" />
+        <input type="text" class="form-control" id="altPhone" name="altPhone" placeholder="{{ _('XXX-XXX-XXXX') }}" value="{{ person.alt_phone if person and person.alt_phone }}"  data-htmltags="true" data-error-field="erroraltPhone"/>
+        <div id="erroraltPhone" class="error-message"></div>
     </div>
 {%- endmacro %}
 
@@ -693,9 +697,9 @@
                       .prepend("<option value='' selected>Select</option>")
                       .val("");
                       $(".state-container, .clinic-prompt").hide();
-                      setTimeout("OT.handlePreSelectedClinic();", 200);
+                      setTimeout(function() { OT.handlePreSelectedClinic();}, 200);
                       //case of pre-selected clinic, need to check if any clinic has prechecked
-                      setTimeout("handleCheckedItem();", 500);
+                      setTimeout(function() { handleCheckedItem();}, 500);
 
                       OT.populateOrgsList(entry);
                       $("#userOrgs input[name='organization']").each(function() {
@@ -713,7 +717,7 @@
                         }); }, 500);
                     };
 
-                  if ($("#mainDiv.profile").length > 0) setTimeout('tnthAjax.getConsent({{ person.id if person }}, true);', 500);
+                  if ($("#mainDiv.profile").length > 0) setTimeout(function() { tnthAjax.getConsent({{ person.id if person }}, true);}, 500);
                 };
 
             }).fail(function() {
@@ -750,7 +754,7 @@
             leafOrgs = {% if current_user.leaf_organizations() %} {{current_user.leaf_organizations() | safe}} {% else %} false {% endif %};
         {% endif %}
         $(function () {
-            setTimeout('tnthAjax.getOrgs({{ person.id if person }}, false, false, _handleOrgs);', 500);
+            setTimeout(function() { tnthAjax.getOrgs({{ person.id if person }}, false, false, _handleOrgs);}, 500);
         });
 
         function _handleOrgs() {
@@ -765,7 +769,7 @@
             {%- if (person and (person.has_role(ROLE.STAFF) or person.has_role(ROLE.STAFF_ADMIN))) -%}
                 $("#userOrgs .noOrg-container").hide();
             {%- endif -%}
-            setTimeout('tnthAjax.getConsent({{ person.id if person }}, true);', 500);
+            setTimeout(function() { tnthAjax.getConsent({{ person.id if person }}, true);}, 500);
         };
     </script>
 {%- endmacro %}
@@ -839,15 +843,17 @@
                         var orgId = $(this).attr("data-org");
                         $("#" + orgId + "_loader").show();
                         if ($(this).val() == "yes") {
-                            var params = CONSENT_ENUM["consented"];
-                            params.org = orgId;
-                            params.agreementUrl = $("#" + orgId + "_agreement_url").val();
-                            setTimeout("tnthAjax.setConsent({{person.id}}, " + JSON.stringify(params) + ");", 10);
-                            setTimeout("tnthAjax.removeObsoleteConsent();", 100);
+                            (function(orgId) {
+                                var params = CONSENT_ENUM["consented"];
+                                params.org = orgId;
+                                params.agreementUrl = $("#" + orgId + "_agreement_url").val();
+                                setTimeout(function() { tnthAjax.setConsent({{person.id}}, params);}, 10);
+                                setTimeout(function() { tnthAjax.removeObsoleteConsent();}, 100);
+                            })(orgId);
                         }
                         else {
                             tnthAjax.deleteConsent({{person.id}}, {"org":orgId});
-                            setTimeout("tnthAjax.removeObsoleteConsent();", 100);
+                            setTimeout(function() { tnthAjax.removeObsoleteConsent();}, 100);
                         };
                         if (typeof reloadConsentList != "undefined") setTimeout("reloadConsentList();", 500);
                         setTimeout('$(".modal").modal("hide");', 250);
@@ -856,7 +862,7 @@
                 $(document).delegate("#consentContainer button[data-dismiss]", "click", function(e) {
                     e.preventDefault();
                     e.stopPropagation();
-                    setTimeout("location.reload();", 10);
+                    setTimeout(function() { location.reload();}, 10);
                 });
                 $("#consentContainer .modal").each(function() {
                     $(this).on("hidden.bs.modal", function() {
@@ -1293,11 +1299,11 @@
             tnthAjax.getClinical({{ person.id }});
             $("#pca_localized_yes").on("click", function() {
                 tnthAjax.putClinical({{person.id}},"pca_localized","true", $(this));
-                setTimeout('adjustAssessmentInstrument();', 1000);
+                setTimeout(function() { adjustAssessmentInstrument();}, 1000);
             });
             $("#pca_localized_no").on("click", function() {
                 tnthAjax.putClinical({{person.id}},"pca_localized","false", $(this));
-                setTimeout('adjustAssessmentInstrument();', 1000);
+                setTimeout(function() { adjustAssessmentInstrument();}, 1000);
             });
             getSaveLoaderDiv("profileForm", "pcaLocalizedContainer");
         });
@@ -1429,7 +1435,7 @@
 
             //wait for ajax calls to finish?
             //hide rest of the questions if the patient hasn't been diagnosed with prostate cancer
-            setTimeout("checkDiagnosis();", 1000);
+            setTimeout(function() { checkDiagnosis();}, 1000);
 
 
         });
@@ -1618,15 +1624,17 @@
 {% macro profileStudyID(current_user) -%}
     <div id="profileStudyIDContainer" class="form-group" data-loader-container="true">
         <label id="profileStudyIDLabel" class="text-muted profile-study-id-label"><span class="default-study-id-label">{{_("Study ID")}}</span></label>
-        <input type="text" id="profileStudyId" class="form-control" {%if current_user and current_user.has_role(ROLE.PATIENT) %}disabled{% endif %}/>
+        <input type="text" id="profileStudyId" class="form-control" {%if current_user and current_user.has_role(ROLE.PATIENT) %}disabled{% endif %} data-htmltags="true" data-error-field="errorprofileStudyId"/>
         <div class="help-block with-errors"></div>
+        <div id="errorprofileStudyId" class="error-message"></div>
     </div>
 {%- endmacro %}
 {% macro profileSiteID(current_user) -%}
     <div id="profileSiteIDContainer" class="form-group" data-loader-container="true">
         <label class="text-muted">{{_("Site ID")}}</label>
-        <input type="text" id="profileSiteId" class="form-control" {%if current_user and current_user.has_role(ROLE.PATIENT) %}disabled{% endif %}/>
+        <input type="text" id="profileSiteId" class="form-control" {%if current_user and current_user.has_role(ROLE.PATIENT) %}disabled{% endif %} data-htmltags="true" data-error-field="errorprofileSiteId"/>
         <div class="help-block with-errors"></div>
+        <div id="errorprofileSiteId" class="error-message"></div>
     </div>
 {%- endmacro %}
 {% macro profileCustomDetail(person) -%}
