--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script><script>window.jQuery || document.write('<script src="../scripts/jquery.min.js"><\/script>')</script>
     <script src="{{ url_for('static', filename='js/i18next.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/i18next-config.js') }}"></script>
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/gil.css') }}"><!--[if lte IE 6]>
     <style>#top, #bottom, #left, #right { display: none; }</style>
@@ -550,6 +551,13 @@
 
             //see gil.js to call loader onclick event of each nav.link
             setTimeout("__loader(false);", 0);
+
+
+            var __ENV = {% if config.SYSTEM_TYPE %}"{{config.SYSTEM_TYPE}}"{% else %}""{% endif %};
+
+             __i18next.init({"debug": (__ENV.toUpperCase() == "PRODUCTION" ? false: true)}, function() {
+                __NOT_PROVIDED_TEXT = i18next.t("Not provided");
+             });
           });
 
       </script>
