--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -14,7 +14,7 @@
     {% set stylesheet = url_for('static', filename=config.PORTAL_STYLESHEET) %}
     <link rel="stylesheet" href="{{ stylesheet }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery-bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </head>
 {# sets container to full-width #}
