--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -27,13 +27,13 @@
                     {%- if providerPerspective == 'true' -%}
                         {{ _("Patient Profile") }} -
                         {%- if user.first_name and user.last_name -%}
-                          &nbsp;{% trans first_name=user.first_name, last_name=user.last_name%}{{first_name}} {{last_name}}{% endtrans %}
+                          &nbsp;{{user.first_name}} {{user.last_name}}
                         {%- elif user.first_name -%}
-                          &nbsp;{% trans first_name=user.first_name%}{{first_name}}{% endtrans %}
+                          &nbsp;{{user.first_name}}
                         {%- elif user.last_name -%}
-                          &nbsp;{% trans last_name=user.last_name%}{{last_name}}{% endtrans %}
+                          &nbsp;{{user.last_name}}
                         {%- elif user.email -%}
-                          &nbsp;{% trans user_email=user.email %}{{ user_email }}{% endtrans %}
+                          &nbsp;{{ user.email }}
                         {%- else -%}
                           &nbsp;#{{ user.id}}
                         {%-endif-%}
@@ -42,7 +42,7 @@
                             {%- if user.email -%}
                             {% trans user_email=user.email %}Profile for {{ user_email }}{% endtrans %}
                             {%- else -%}
-                            {{ _("Profile for") }} #{{user.id}}
+                            {% trans user_id=user.id %}Profile for #{{ user_id }}{% endtrans %}
                             {%- endif -%}
                         {%- else -%}
                             {{ _("My TrueNTH Profile") }}
